--- a/MailService/MailService.csproj
+++ b/MailService/MailService.csproj
@@ -7,7 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="7.3.0" />
+    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MailService.DTO\MailService.DTO.csproj" />
   </ItemGroup>
 </Project>
