--- a/MailService/appsettings.json
+++ b/MailService/appsettings.json
@@ -4,6 +4,10 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Mail": {
+      "From": "test@mailhog.local",
+      "Server":  "localhost:1025"
     }
   }
 }
